feat(ui): implement particle background as fixed layer across entire app

--- a/src/sections/header.astro
+++ b/src/sections/header.astro
@@ -4,7 +4,7 @@ import GradientText from "@/animations/gradientText/gradientText";
 
 <header
   id="navbar"
-  class="fixed bg-[#09090b]/90 w-full top-0 left-0 z-50 transition-all duration-300 py-4"
+  class="fixed bg-bg w-full top-0 left-0 z-50 transition-all duration-300 py-4"
 >
   <div class="container mx-auto px-4 md:px-8">
     <div class="flex justify-between items-center">
@@ -59,7 +59,7 @@ import GradientText from "@/animations/gradientText/gradientText";
       <!-- Mobile Menu Button -->
       <button id="menu-btn" class="md:hidden text-2xl">
         <GradientText
-          colors={["#40ffaa", "#4079ff", "#40ffaa", "#4079ff", "#615fff"]}
+          colors={["#42d9c8", "#037171", "#42d9c8", "#037171"]}
           animationSpeed={6}
           showBorder={false}
           className=""
