--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -6,7 +6,7 @@ import AnimatedBackground from "@/animations/background/background";
 ---
 
 <!doctype html>
-<html lang="es">
+<html lang="es" class="overflow-x-hidden">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -37,10 +37,10 @@ import AnimatedBackground from "@/animations/background/background";
   </head>
   <body>
     <AnimatedBackground client:load />
-    <Header />
-    <main>
-      <slot />
-    </main>
-    <Footer />
+      <Header />
+      <main>
+        <slot />
+      </main>
+      <Footer />
   </body>
 </html>
