--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,6 +15,7 @@ import AboutMe from "@/sections/aboutMe.astro";
   <section class="scroll-section"><Experience /></section>
   <section class="scroll-section"><CountProjects /></section>
   <section class="scroll-section"><Contact /></section>
+  </div>
 </Layout>
 
 <script type="module">
