feat: enhace style of social icons

--- a/src/sections/header.astro
+++ b/src/sections/header.astro
@@ -4,13 +4,13 @@ import GradientText from "@/animations/gradientText/gradientText";
 
 <header
   id="navbar"
-  class="fixed bg-bg w-full top-0 left-0 z-50 transition-all duration-300 py-4"
+  class="fixed bg-bg/90 w-full top-0 left-0 z-50 transition-all duration-300 py-4"
 >
   <div class="container mx-auto px-4 md:px-8">
     <div class="flex justify-between items-center">
       <!-- Logo -->
       <a
-        href="#"
+        href="#hero"
         class="text-2xl font-bold text-gradient flex items-center gap-2"
       >
         <GradientText
