--- a/src/sections/hero.astro
+++ b/src/sections/hero.astro
@@ -3,12 +3,11 @@ import AnimatedSplitText from "@/animations/splitText/gsap/animatedSplitText";
 import RotatingText from "@/animations/rotatingText/rotatingText";
 import SocialLinks from "@/components/socialLinks/socialLinks.astro";
 import CardImage from "@/components/cardImage/cardImage.astro";
-
 ---
 
 <section
   id="hero"
-  class="min-h-screen pt-24 pb-16 flex items-center relative overflow-hidden"
+  class="min-h-screen pt-24 pb-16 flex items-center relative"
 >
 
   <div class="container mx-auto px-4 md:px-8">
