feat: update webkit scrollbar styles

--- a/src/components/cardImage/cardImage.astro
+++ b/src/components/cardImage/cardImage.astro
@@ -7,7 +7,7 @@
 >
   <div class="hero-gradients absolute inset-0 rounded-4xl"></div>
   <div
-    class="profile-card relative z-10 border-3 border-second/70 p-4 rounded-[50px] bg-base/20 backdrop-blur-xl hover:border-second transition-all duration-500 shadow-2xl shadow-second/50"
+    class="profile-card relative z-10 border-3 border-primary/70 p-4 rounded-[50px] bg-base/20 backdrop-blur-xl hover:border-primary transition-all duration-500 shadow-2xl shadow-primary/50"
   >
     <img
       src="/images/profile.png"
@@ -16,11 +16,11 @@
     />
 
     <div
-      class="absolute top-4 right-4 w-20 h-20 border-t-3 border-r-3 border-second rounded-tr-4xl"
+      class="absolute top-4 right-4 w-20 h-20 border-t-3 border-r-3 border-primary rounded-tr-4xl"
     >
     </div>
     <div
-      class="absolute bottom-4 left-4 w-20 h-20 border-b-3 border-l-3 border-second rounded-bl-4xl"
+      class="absolute bottom-4 left-4 w-20 h-20 border-b-3 border-l-3 border-primary rounded-bl-4xl"
     >
     </div>
   </div>
