--- a/src/sections/hero.astro
+++ b/src/sections/hero.astro
@@ -15,15 +15,15 @@ import CardImage from "@/components/cardImage/cardImage.astro";
       <!-- Hero Content -->
       <div class="space-y-7 reveal-content">
         <div
-          class="inline-block py-1 px-3 rounded-full bg-first/10 border border-second text-sm mb-2 animate-fadeUp"
+          class="inline-block py-1 px-3 rounded-full bg-transparent border border-primary text-sm mb-2 animate-fadeUp"
           style="--delay: 0.2s"
         >
           <span class="flex items-center gap-2">
-            <span class="size-[10px] rounded-full bg-second animate-pulse"
+            <span class="size-[10px] rounded-full bg-primary animate-pulse"
             ></span>
             <AnimatedSplitText
               text="Available for Freelance Projects"
-              className="text-white/80 text-sm font-semibold"
+              className="text-text/80 text-sm font-semibold"
               client:load
               x={0}
               y={10}
@@ -46,7 +46,7 @@ import CardImage from "@/components/cardImage/cardImage.astro";
           <div class="flex animate-fadeUp" style="--delay: 0.8s">
             <AnimatedSplitText
               text="Hi, I'm Mario Perdomo"
-              className="text-5xl md:text-5xl lg:text-6xl font-extrabold text-white"
+              className="text-5xl md:text-5xl lg:text-6xl font-extrabold"
               client:load
               x={0}
               y={20}
@@ -61,7 +61,7 @@ import CardImage from "@/components/cardImage/cardImage.astro";
           >
             <AnimatedSplitText
               text="Creating"
-              className="text-2xl md:text-3xl text-white font-bold"
+              className="text-2xl md:text-3xl text-text font-bold"
               client:load
               duration={1}
               stagger={0.2}
@@ -76,7 +76,7 @@ import CardImage from "@/components/cardImage/cardImage.astro";
                   "Software",
                   "User Experiences",
                 ]}
-                mainClassName="text-2xl md:text-3xl bg-second px-2 rounded-lg text-bg overflow-hidden font-bold"
+                mainClassName="text-2xl md:text-3xl bg-primary px-2 rounded-lg text-background overflow-hidden font-bold"
                 staggerFrom={"last"}
                 initial={{ y: "100%", opacity: 0 }}
                 animate={{ y: 0, opacity: 1 }}
@@ -93,7 +93,7 @@ import CardImage from "@/components/cardImage/cardImage.astro";
           <div class="animate-fadeUp" style="--delay: 0.8s">
             <AnimatedSplitText
               text="I craft digital experiences that blend creativity with technical excellence. Specializing in creating modern, responsive, and user-friendly web applications."
-              className="text-white/80 text-lg max-w-lg"
+              className="text-text/80 text-lg max-w-lg"
               client:load
               x={0}
               y={20}
@@ -109,14 +109,14 @@ import CardImage from "@/components/cardImage/cardImage.astro";
         >
             <a
             href="#projects"
-            class="btn-primary bg-gradient-to-r from-second/10 to-second/30 border border-second text-white py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium"
+            class="bg-gradient-to-r from-primary/10 to-primary/30 border border-primary text-text py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium"
           >
             <i class="ri-eye-line"></i> View My Work
           </a>
 
           <a
             href="#contact"
-            class="btn-secondary border border-second text-white py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium backdrop-blur-sm "
+            class="border border-primary text-text py-3 px-8 rounded-full transition-all duration-300 flex items-center gap-2 font-medium backdrop-blur-sm "
           >
             <i class="ri-chat-1-line"></i> Contact Me
           </a>
