--- a/src/components/socialLinks/socialLinks.astro
+++ b/src/components/socialLinks/socialLinks.astro
@@ -3,16 +3,32 @@
 ---
 
 <div class="flex gap-6 pt-4 animate-fadeUp" style="--delay: 1.2s">
-  <a href="#" class="social-icon" aria-label="GitHub">
+  <a
+    href="#"
+    class="flex items-center justify-center w-10 h-10 text-[1.25rem] text-primary/60 rounded-full bg-fourth/10 transition-all duration-300 ease-in-out hover:text-white hover:bg-fourth/30 hover:-translate-y-1.5 hover:shadow-md shadow-primary"
+    aria-label="GitHub"
+  >
     <i class="ri-github-fill"></i>
   </a>
-  <a href="#" class="social-icon" aria-label="LinkedIn">
+  <a
+    href="#"
+    class="flex items-center justify-center w-10 h-10 text-[1.25rem] text-primary/60 rounded-full bg-fourth/10 transition-all duration-300 ease-in-out hover:text-white hover:bg-fourth/30 hover:-translate-y-1.5 hover:shadow-md shadow-primary"
+    aria-label="LinkedIn"
+  >
     <i class="ri-linkedin-fill"></i>
   </a>
-  <a href="#" class="social-icon" aria-label="Twitter">
+  <a
+    href="#"
+    class="flex items-center justify-center w-10 h-10 text-[1.25rem] text-primary/60 rounded-full bg-fourth/10 transition-all duration-300 ease-in-out hover:text-white hover:bg-fourth/30 hover:-translate-y-1.5 hover:shadow-md shadow-primary"
+    aria-label="Twitter"
+  >
     <i class="ri-twitter-x-fill"></i>
   </a>
-  <a href="#" class="social-icon" aria-label="Dribbble">
+  <a
+    href="#"
+    class="flex items-center justify-center w-10 h-10 text-[1.25rem] text-primary/60 rounded-full bg-fourth/10 transition-all duration-300 ease-in-out hover:text-white hover:bg-fourth/30 hover:-translate-y-1.5 hover:shadow-md shadow-primary"
+    aria-label="Dribbble"
+  >
     <i class="ri-dribbble-line"></i>
   </a>
 </div>
