--- a/src/sections/header.astro
+++ b/src/sections/header.astro
@@ -4,7 +4,7 @@ import GradientText from "@/animations/gradientText/gradientText";
 
 <header
   id="navbar"
-  class="fixed bg-bg/90 w-full top-0 left-0 z-50 transition-all duration-300 py-4"
+  class="fixed w-full top-0 left-0 z-50 transition-all duration-300 py-4"
 >
   <div class="container mx-auto px-4 md:px-8">
     <div class="flex justify-between items-center">
@@ -14,8 +14,8 @@ import GradientText from "@/animations/gradientText/gradientText";
         class="text-2xl font-bold text-gradient flex items-center gap-2"
       >
         <GradientText
-          colors={["#42d9c8", "#037171", "#42d9c8", "#037171"]}
-          animationSpeed={6}
+          colors={["#42d9c8", "#223a4e", "#42d9c8", "#223a4e"]}
+          animationSpeed={10}
           showBorder={false}
           className=""
           client:load
@@ -29,27 +29,27 @@ import GradientText from "@/animations/gradientText/gradientText";
       <nav class="hidden md:flex items-center space-x-8">
         <a
           href="#about"
-          class="text-gray-300 hover:text-white transition-colors duration-300"
+          class="text-gray-300 hover:text-text transition-colors duration-300"
           >About</a
         >
         <a
           href="#projects"
-          class="text-gray-300 hover:text-white transition-colors duration-300"
+          class="text-gray-300 hover:text-text transition-colors duration-300"
           >Projects</a
         >
         <a
           href="#experience"
-          class="text-gray-300 hover:text-white transition-colors duration-300"
+          class="text-gray-300 hover:text-text transition-colors duration-300"
           >Experience</a
         >
         <a
           href="#contact"
-          class="text-gray-300 hover:text-white transition-colors duration-300"
+          class="text-gray-300 hover:text-text transition-colors duration-300"
           >Contact</a
         >
         <a
           href="#"
-          class="bg-[#42d9c8] hover:bg-indigo-700 text-[#09090b] font-semibold py-2 px-6 rounded-full transition-all duration-300 flex items-center gap-2"
+          class="bg-primary hover:bg-primary/50 hover:text-text text-background font-semibold py-2 px-6 rounded-full transition-all duration-500 flex items-center gap-2"
         >
           <i class="ti ti-download"></i>
           Resume
@@ -60,7 +60,7 @@ import GradientText from "@/animations/gradientText/gradientText";
       <button id="menu-btn" class="md:hidden text-2xl">
         <GradientText
           colors={["#42d9c8", "#037171", "#42d9c8", "#037171"]}
-          animationSpeed={6}
+          animationSpeed={4}
           showBorder={false}
           className=""
           client:load
@@ -75,32 +75,32 @@ import GradientText from "@/animations/gradientText/gradientText";
 <!-- Mobile Navigation -->
 <div
   id="mobile-menu"
-  class="md:hidden bg-slate-900 absolute top-full left-0 w-full py-4 px-4 hidden"
+  class="md:hidden bg-background absolute top-full left-0 w-full py-4 px-4 hidden"
 >
   <div class="flex flex-col space-y-4">
     <a
       href="#about"
-      class="text-gray-300 hover:text-white transition-colors duration-300 py-2"
+      class="text-gray-300 hover:text-text transition-colors duration-300 py-2"
       >About</a
     >
     <a
       href="#projects"
-      class="text-gray-300 hover:text-white transition-colors duration-300 py-2"
+      class="text-gray-300 hover:text-text transition-colors duration-300 py-2"
       >Projects</a
     >
     <a
       href="#experience"
-      class="text-gray-300 hover:text-white transition-colors duration-300 py-2"
+      class="text-gray-300 hover:text-text transition-colors duration-300 py-2"
       >Experience</a
     >
     <a
       href="#contact"
-      class="text-gray-300 hover:text-white transition-colors duration-300 py-2"
+      class="text-gray-300 hover:text-text transition-colors duration-300 py-2"
       >Contact</a
     >
     <a
       href="#"
-      class="bg-indigo-600 hover:bg-indigo-700 text-white py-2 px-6 rounded-full transition-all duration-300 flex items-center gap-2 justify-center"
+      class="bg-indigo-600 hover:bg-indigo-700 text-text py-2 px-6 rounded-full transition-all duration-300 flex items-center gap-2 justify-center"
     >
       <i class="ri-download-line"></i> Resume
     </a>
